<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/g_background_birutua"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="5dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="@drawable/a_roundedlayout_putih"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp">

            <ImageView
                tools:ignore="ContentDescription"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/g_bidan_delima"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/register_name"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="25sp"/>

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="30dp"
                android:hint="@string/username"
                android:drawableLeft="@drawable/a_account_art"
                android:drawablePadding="7dp"
                android:inputType="textPersonName"
                android:textAlignment="viewStart"
                android:textSize="17sp"
                android:singleLine="true"
                android:drawableStart="@drawable/a_account_art"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/phone"
                android:drawablePadding="7dp"
                android:inputType="phone"
                android:textSize="17sp"
                android:singleLine="true"
                android:textAlignment="viewStart"
                android:layout_gravity="start"
                android:drawableStart="@drawable/a_phone_art"
                android:drawableLeft="@drawable/a_phone_art"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/Email"
                android:drawableLeft="@drawable/a_email_art"
                android:drawablePadding="7dp"
                android:inputType="textEmailAddress"
                android:textSize="17sp"
                android:singleLine="true"
                android:textAlignment="viewStart"
                android:layout_gravity="start"
                android:drawableStart="@drawable/a_email_art"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/password"
                android:drawableLeft="@drawable/a_lock_art"
                android:drawablePadding="7dp"
                android:inputType="textPassword"
                android:textSize="17sp"
                android:singleLine="true"
                android:textAlignment="viewStart"
                android:layout_gravity="start"
                android:drawableStart="@drawable/a_lock_art"
                android:importantForAutofill="no" />

            <CheckBox
                android:id="@+id/showPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_pass" />


            <android.widget.Button
                android:id="@+id/btn_daftar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/a_roundedbutton_putihbiru"
                android:text="@string/btn_register"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:shadowRadius="@integer/config_navAnimTime"
                android:foreground="?attr/selectableItemBackground"/>

            <TextView
                android:id="@+id/btn_masuk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/klik_untuk_masuk"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:textColor="@color/blue_link"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:shadowRadius="@integer/config_navAnimTime"/>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:visibility="gone" />

    </LinearLayout>

</RelativeLayout>