<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/g_background_birutua"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/a_roundedlayout_putih"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/g_bidan_delima"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/login_name"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="30dp"
                android:drawableStart="@drawable/a_email_art"
                android:drawableLeft="@drawable/a_email_art"
                android:drawablePadding="7dp"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textAlignment="viewStart"
                android:textColorHighlight="@color/textcolorhighlight"
                android:textColorHint="@color/colorhint"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="15dp"
                android:drawableStart="@drawable/a_lock_art"
                android:drawableLeft="@drawable/a_lock_art"
                android:drawablePadding="7dp"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textAlignment="viewStart"
                android:textColorHighlight="@color/textcolorhighlight"
                android:textColorHint="@color/colorhint"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/showPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_pass" />

            <android.widget.Button
                android:id="@+id/btn_masuk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/a_roundedbutton_putihbiru"
                android:foreground="?attr/selectableItemBackground"
                android:shadowRadius="@integer/config_navAnimTime"
                android:text="@string/btn_masuk"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btn_daftar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:shadowRadius="@integer/config_navAnimTime"
                android:text="@string/klik_untuk_daftar"
                android:textAlignment="center"
                android:textColor="@color/blue_link"
                android:textSize="15sp" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:visibility="gone" />

    </LinearLayout>

</RelativeLayout>