<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_profile"
    android:orientation="vertical"
    android:background="@drawable/g_background_birutua">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/a_roundedlayout_putih">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ubah Profile"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textAllCaps="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/a_roundedlayout_putih">

        <EditText
            android:id="@+id/tv_username"
            android:drawableStart="@drawable/a_account_art"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:padding="5dp"
            android:drawablePadding="5dp"/>

        <EditText
            android:id="@+id/tv_phone_user"
            android:layout_below="@+id/tv_username"
            android:drawableStart="@drawable/a_phone_art"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/phone"
            android:padding="5dp"
            android:drawablePadding="5dp"/>

        <EditText
            android:id="@+id/tv_email_user"
            android:layout_below="@+id/tv_phone_user"
            android:drawableStart="@drawable/a_email_art"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:padding="5dp"
            android:drawablePadding="5dp"/>

        <EditText
            android:id="@+id/password_user"
            android:layout_below="@+id/tv_email_user"
            android:drawableStart="@drawable/a_lock_art"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:padding="5dp"
            android:drawablePadding="5dp"/>

        <android.widget.Button
            android:id="@+id/btn_ubah_profile"
            android:layout_below="@id/password_user"
            android:text="Simpan"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/a_roundedbutton_hijau"/>

    </RelativeLayout>

</LinearLayout>