<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/g_background_birutua">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/a_roundedlayout_putih">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/konsultasi"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textAllCaps="true"/>


    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/a_roundedlayout_putih">

    <TextView
        android:id="@+id/tv_phone_office"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_konsul"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/blue_link"
        app:drawableLeftCompat="@drawable/a_telepon_art"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:foreground="?attr/selectableItemBackground"/>

    <TextView
        android:id="@+id/tv_phone_whatsapp"
        android:layout_below="@+id/tv_phone_office"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_konsul2"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/blue_link"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        app:drawableLeftCompat="@drawable/a_hp_art"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:shadowRadius="@integer/config_navAnimTime"
        android:foreground="?attr/selectableItemBackground"/>

    </RelativeLayout>

</LinearLayout>