<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/g_background_birutua">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/a_roundedlayout_putih">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/queue"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textAllCaps="true"/>

    </RelativeLayout>

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="30dp"
        android:background="@drawable/a_roundedlayout_putih">

        <LinearLayout
            android:id="@+id/container_jumlah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title_antrian"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_antrian"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tv_antrian_saat_now"
                    android:gravity="center"
                    android:text="..."
                    android:textStyle="bold"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_gravity="center"
                    android:textSize="50sp"
                    android:layout_marginTop="10dp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_antrian_total"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_antrian_total"
                    android:gravity="center"
                    android:text="..."
                    android:textStyle="bold"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_gravity="center"
                    android:textSize="50sp"
                    android:layout_marginTop="10dp" />


            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/tv_catatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/container_jumlah"
            android:text="@string/title_antrian2"
            android:textSize="15sp"
            android:textAlignment="textStart"
            android:layout_marginTop="10dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_title_antrian_anda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Antrian Anda"
            android:textAlignment="center"
            android:layout_below="@+id/tv_catatan"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_antrian_user"
            android:layout_below="@+id/tv_title_antrian_anda"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="..."
            android:textStyle="bold"
            android:textSize="40sp"
            android:textAlignment="center"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp" />


        <android.widget.Button
            android:id="@+id/btn_ambil_antrian"
            android:layout_below="@+id/tv_antrian_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/btn_ambil_antrian"
            android:textAllCaps="false"
            android:background="@drawable/a_roundedbutton_hijau"
            android:shadowRadius="@integer/config_navAnimTime"
            android:foreground="?attr/selectableItemBackground"/>

    </RelativeLayout>

</LinearLayout>